--- a/style.css
+++ b/style.css
@@ -1,4 +1,269 @@
 *{
     margin: 0px;
-    border: border-box;
+    font-family: arial;
+}
+
+.ad-banner{
+    height: 120px;
+    background-color: rgba(193, 186, 199, 0.25);
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+
+
+.ad-image{
+    background-image: url(New-york.webp);
+    background-size: cover;
+    border-radius: 5px;
+    width: 100px;
+    height: 100px;
+    transform: rotate(-7deg);
+    
+}
+
+.sponser{
+    background-color: rgba(131, 113, 113, 0.2);
+    font-size: 0.8rem;
+    height: 18px;
+    display: inline-block;
+}
+
+.ad-tital{
+    height: 20px;
+    font-weight: 600;
+    font-size: 1.2rem;
+    
+}
+.ad-para{
+    height: 18px;
+    font-size: 0.9rem;
+}
+
+.ad-button{
+    height: 40px;
+    width: 120px;
+    border: 2px solid black;
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.search-banner{
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 100%;
+    margin-top: 2px;
+}
+
+
+.banner-2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.logo{
+    background-image: url(Website-logo.png);
+    background-size: contain;
+    width: 45px;
+    height: 45px;
+    
+}
+.banner-2 a{
+    font-size: 2rem;
+    font-weight: 600;
+     
+}
+
+.search1{
+    height: 40px;
+    width: 500px;
+    border: 2px solid rgb(223, 205, 205);
+    border-radius: 30px;
+    
+
+}
+
+.other-banner{
+    font-size: 1.2rem;
+    font-weight: 400;
+}
+.other-banner a{
+    padding-left: 10px;
+}
+
+.signin{
+    height: 35px;
+    width: 80px;
+    color: white;
+    background-color: black;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-shrink: 0;
+}
+
+.banner-3{
+    margin-top: 10px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+}
+
+.banner-3 a{
+    font-size: 1rem;
+    font-weight: 600;
+    margin-right: 20px;
+    
+
+}
+
+.location{
+    height: 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.location a{
+    font-size: 0.8rem;
+}
+
+.main-heading{
+    height: 50px;
+    font-size: 2rem;
+    font-weight: 700;
+    text-align: center;
+}
+
+main{
+    height: 100%;
+    background-color: rgba(131, 113, 113, 0.2);
+}
+
+.rest-part-1{
+    display: flex;
+    margin-bottom: 15px;
+}
+
+
+.rest-img-1{
+    background-image: url(image1.jpg);
+    background-size: cover;
+    height: 200px;
+    width: 250px;
+    margin: 0px 10px 0px 5px;
+    border-radius: 10px;
+}
+
+.gandhi{
+    font-size: 1.5rem;
+    font-weight: 500;
+}
+
+.close_now{
+    color: red;
+}
+
+.rest-part-1{
+    background-color: white;
+}
+
+.last-banner{
+    height: 100%;
+    margin-top: 10px;
+}
+
+@media (max-width: 820px) {
+    .ad-logo-banner{display: none;}
+}
+
+@media (max-width: 1120px) {
+    .other-banner{display: none;}
+}
+
+@media (max-width: 850px) {
+    .search1{width: 300px;}
+}
+
+@media (max-width: 650px) {
+    .search1{width: 150px;}
+}
+
+.summary{
+    color: black;
+    font-weight: 600;
+    font-size: 1.2rem;
+    margin-bottom: 25px;
+}
+
+summary{
+    color: black;
+    font-size: 0.8rem;
+    font-weight: 600;
+   
+}
+
+p{
+    font-size: 1rem ;
+    font-weight: 300;
+    margin-top: 10px;
+}
+
+
+.last-logo-banner{
+    height: 100px;
+    background-color: rgba(131, 113, 113, 0.2);
+    display: flex;
+    align-items: center;
+}
+
+.last-heading{
+    font-size: 0.8rem;
+    font-weight: 200;
+    flex: 1;
+}
+
+.last-logo{
+    background-image: url(Website-logo.png);
+    background-size: cover;
+    height: 50px;
+    width: 50px;
+    flex-shrink: 0;
+}
+
+.inr select{
+    height: 30px;
+    width: 150px;
+    border-radius: 5px;
+}
+
+.india select{
+    height: 30px;
+    width: 150px;
+    border-radius: 5px;
+
+}
+
+
+u{
+    font-size: 0.9rem;
+    font-weight: 550;
+    padding-right: 20px;
+}
+
+.india{
+    margin-right: 15px;
+
+}
+
+.inr{
+    margin-right: 10px;
 }
